--- a/Assignments/Feb 5th OOPS_Assignment.ipynb
+++ b/Assignments/Feb 5th OOPS_Assignment.ipynb
@@ -352,10 +352,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "903741d4-856a-49f3-ab31-b6ec2d080f07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside phone constructor\n",
+      "Buying a phone\n",
+      "Customer review\n"
+     ]
+    }
+   ],
    "source": [
     "#Multiple Inheritance\n",
     "class Phone:\n",
