--- a/Assignments/Feb 6th Python Task 1_Assignment.ipynb
+++ b/Assignments/Feb 6th Python Task 1_Assignment.ipynb
@@ -225,13 +225,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29d4d23a-2d0a-413c-b572-bcb1777a5cee",
+   "cell_type": "markdown",
+   "id": "127f4966-e8d5-4082-a76a-27ef33655286",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### Above is same functionality"
+    "### Above is same functionality in two ways, one as a script other one as a function."
    ]
   }
  ],
