--- a/Assignments/Feb 17th MongoDB_Assignment.ipynb
+++ b/Assignments/Feb 17th MongoDB_Assignment.ipynb
@@ -78,14 +78,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "id": "6f31a491-43d1-4991-9864-4fb71452a6c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Code to connect to MongoDB\n",
     "import pymongo\n",
-    "client = pymongo.MongoClient(\"mongodb+srv://user:userpwd@cluster0.cg2sh5t.mongodb.net/?retryWrites=true&w=majority\")\n",
+    "#below password is changed after all cells are executed\n",
+    "client = pymongo.MongoClient(\"mongodb+srv://user:aqzwsedx123@cluster0.cg2sh5t.mongodb.net/?retryWrites=true&w=majority\")\n",
     "#Database creation. In MongoDB database is created if and only if there is a collection in it/collection created in it.\n",
     "db = client['newdb']\n",
     "#Collection creation.\n",
